fix issue of not being able to see vertical overflow elements + additional routes

--- a/BookClubFE/src/index.css
+++ b/BookClubFE/src/index.css
@@ -15,7 +15,7 @@
 
 #root {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   height: 100vh;
   height: 100dvh;
   width: 100%;
